# Blackoutz

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  blackout-havoc.py  box.c  build.py  fixpeb.c  test.c
Scripts/: blackout-havoc.py  build.py  shellcode.py
Scripts/havoc/: service.py
agent/: .gitignore  CMakeLists.txt  README.md  blackout-havoc.py  heap.c  makefile
agent/Source/: Entry.c  Main.c
agent/Source/Asm/: Blackout.x64.asm
agent/Source/Communication/: Package.c  Transport.c
agent/Source/Crypt/: Short.c
agent/Source/Evasion/: Coff.c  Dotnet.c  HookingPatch.c  Hwbp.c  Injection.c  Obf.c  Syscall.c
agent/Source/Misc/: Command.c  Core.c  Utils.c  Win32.c  bkApi.c
agent/havoc/: agent.py  externalc2.py
agent/include/: BkApi.h  Command.h  Common.h  Constexpr.h  Macros.h  Native.h  Package.h  Transport.h  Utils.h  bkapi.h  command.h  common.h  communication.h  constexpr.h  crypt.h  evasion.h  macros.h  misc.h  native.h  package.h  transport.h  utils.h
agent/scripts/: Linker.ld  build_shellcode.py  loader.c  loader.remote.c  stomper.c
agent/src/: BkApi.c  Command.c  Command.cz  Core.c  Entry.c  Main.c  Obf.c  Package.c  SleepObf.c  Transport.c  Utils.c  Win32.c  bkapi.c  command.c  core.c  entry.c  main.c  obf.c  package.c  transport.c  utils.c  win32.c
agent/src/asm/: blackout.x64.asm
agent/src/communication/: package.c  transport.c
agent/src/crypt/: chacha.c  short.c
agent/src/evasion/: coff.c  hwbp.c  injection.c  obf.c  syscalls.c
agent/src/misc/: bkapi.c  command.c  core.c  utils.c  win32.c
havoc/: agent.py
loader/: CMakeLists.txt
loader/Source/: Common.cc  Injection.cc  Main.cc  Transport.cc  anti_analysis.cc
loader/Source/obfuscation/: chacha.cc
loader/include/: Loader.hh  Native.hh  config.h  hashing.h  macros.h  native.h  shellcode.h
loader/include/obfuscation/: chacha.h
loader/scripts/: chacha.c
loader/src/: anti_analysis.c  common.c  common.cc  control.c  injection.c  main.c  main.cc  transport.c  transport.cc
loader/src/obfuscation/: chacha.c  chacha.cc
